--- a/web/css/style.css
+++ b/web/css/style.css
@@ -5,9 +5,6 @@
 	transition: all 0.1s ease-in;
 	cursor: default
 }
-html {
-	height: 100%;
-}
 .box_1 {
 	margin:0 0 0 0;
 	max-width: 1480px;
@@ -95,6 +92,7 @@ html {
 	font-size: 50px;/* Приближение из-за подстановки шрифтов */
 	font-weight: 400;
 	text-align: center;
+	margin-top: 25px;
 }
 .forma_2 {
 	background-color:  #ffffff;
